overrides.css
/* overrides.css — custom style overrides */

/* ADMIN-ONLY TEST CLASS PROVIDED BY TIMBER - Included here as an example
.user-role-store_admin {
    .class-name {
        ---stuff---
    }
}
*/

.notfront main .region-content {
    margin-top: 20px;
}

/* NAVIGATION MENU ADJUSTMENTS */

li.nav-item {
    padding: 1px 6px 0 6px;
}

.ada-icon.contact {
    margin-left: 0;
    margin-right: 0;
}

#cat-menu-button:hover {
    transform: translateX(0);
}

#cat-menu-button.ada-icon i {
    width: 27px;
}

/* Reduce nav menu height on mobile */

.timber-header-autocomplete-search {
    display: none;
}

.navbar .nav-icon-wrapper {
    top: 10px;
}

/* More nav fixes but only at screens larger than mobile */
@media (min-width: 990px) and (min-device-width: 990px) {
    #block-commercenavigationmenu li a {
        font-family: Cabin;
    }

    header ul.menu a.is-active {
        font-weight: 700 !important;
        color: white;
        &.sf-depth-1 {
            border-bottom: 3px solid var(--accent-1);
            margin-bottom: -3px;
        }
        &.sf-depth-2 {
            border-left: 3px solid var(--accent-1);
            padding-left: 7px;
        }
    }

    .region-nav-main {
        justify-content: space-between;
    }

    .sf-depth-1 {
        width: 130px;
    }

    .navbar .nav-icon-wrapper {
        justify-content: right;
    }
}

/* PRODUCT SEARCH */

/* Book titles */
.timber_data .timber-data-content .timber-data-field-title a {
    line-clamp: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: normal;
    max-width: 100%;
    padding: 0;
    margin-bottom: 0.5em;
    font-size: 0.8em;
    line-height: 1.2;
}

/* Author names */
.views-field-timber-data .timber-data-content .field--name-product_author {
    font-size: 0.8em !important;
}

/* Pre-order indicator */
.preorder_message {
    margin-top: 0.25em;
}

/* Remove publisher and ISBN from carousel book listings, per Abby's request on 06/16 Tuesday */
.field--label-inline.field--name-product_sku,
.field--label-inline.field--name-product_publisher {
    display: none;
}

/* CALENDAR */

.fc-event {
    font-size: 0.7em;
    line-height: 1.2;
}

.fc-day-grid-event .fc-time {
    font-weight: 400;
}

.fc-day-grid-event .fc-content {
    line-clamp: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: normal;
    overflow: hidden;
}

p.calendar-event-title {
    margin-bottom: 0.5em;
}

/* Prevent descenders from getting cut off on page titles in event pages */
h1 span.field--name-title {
    padding-bottom: 0.1em;
}

/* FOOTER */

.region-footer {
    justify-content: space-between;
    align-items: flex-start;
    .nav-item {
        margin: 0 auto;
    }
}

footer ul.nav.navbar-nav li a {
    padding-top: 0;
    margin-left: 0;
}

.timber-footer-address {
    padding: 0;
    /*.layout {
        margin-top: -15px;
    }*/
}

#block-timberfootertag {
    padding-top: 5px;
    padding-bottom: 5px;
}

